### Update 1.11.2 🎉 (October 4, 2024)

- Small fix for Ad Blocker (Skipper) plugin - now ads are skipped noticeably faster.
- Track thumbnail in miniplayer is now loaded via proxy if it is installed.
- Updated pytubefix to version 7.2.2.
- Discord Rich Presence plugin now has buttons again, namely “Play in Browser” and “YTMDPlayer on GitHub”.
- The Discord Rich Presence plugin now reconnects every time a connection to Discord fails, even if Discord is initially closed.

### Update 1.11.1 🎉 (September 28, 2024)

- Updated pytubefix to version 7, thus fixing a persistent bug when loading tracks/playlists.

### Update 1.11 🎉 (September 24, 2024)

- Increased the size of buttons and icons for likes and dislikes in the mini player window.

### Update 1.11-rc1 🎉 (September 22, 2024)

- Added support for likes and dislikes in window thumbnail, mini player and tray icon.
- Added ability to specify custom URL in 1 command line argument. Example: `C:\Program Files\YTMDPlayer>YTMDPlayer.exe https://music.youtube.com/watch?v=lYBUbBu4W08`.

### Update 1.10.3 🎉 (August 28, 2024)

- Fixed some bugs in track/playlist downloader.
- Now with any problematic video in the playlist there will be an error downloading the whole playlist.
- Removed checkbox to allow pytube (downloader) access to user proxy server.

### Update 1.10.2 🎉 (August 26, 2024)

- Fixed application crash related to clearing Discord RPC when Discord is already closed.
- Other minor fixes and improvements.

### Update 1.10.1 🎉 (August 21, 2024)

- Fixed display of some previews in the mini player.
- Fixed a bug that made it possible to open the mini-player on the playlist page.
- The settings window has a fixed size again.
- Added Placeholder Text to Host, Port, Login and Password fields in Application Proxy settings.
- Other minor fixes and improvements.

### Update 1.10 🎉 (August 10, 2024)
